--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
   <meta charset="UTF-8">
   <title>Mi página web</title>
 </head>
+
 <body>
-  <h1>Ayla</h1>
-  <p>Mochilas, bolsos, carteras, billeteras</p>
+  <div>
+  <img src="./img/Logo.png" alt="Logo del sitio" width="150px">
+  </div>
+  <h1>Bocaditos Chulos</h1>
+  <p>Un eCommerce de snacks, tortas, helados y delicias artesanales para perros y gatos, elaborados con ingredientes saludables, con una estética cuidada y pensados como "mimos comestibles".</p>
+
+  <header>
+    
+  </header>
+
+
+<footer>  
+    <div>
+      <ul>
+          <p>NAVEGACIÓN</p>
+            <li><a href="#">Iniciar sesión</a></li>
+            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Contacto</a></li>
+      </ul>
+    </div>
+
+    <div>
+        <ul>
+          <p>REDES SOCIALES</p>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">TikTok</a></li>
+        </ul>
+      </div>
+
+</footer>
+
 </body>
 </html>
