--- a/index.html
+++ b/index.html
@@ -2,19 +2,48 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi página web</title>
+  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+  <title>Bocaditos Chulos</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
 <body>
-  <div>
-  <img src="./img/Logo.png" alt="Logo del sitio" width="150px">
-  </div>
-  <h1>Bocaditos Chulos</h1>
-  <p>Un eCommerce de snacks, tortas, helados y delicias artesanales para perros y gatos, elaborados con ingredientes saludables, con una estética cuidada y pensados como "mimos comestibles".</p>
 
-  <header>
-    
+  <header class="header">
+      <div class="logo">
+        <img src="/img/logo.png" alt="Logo del sitio" width="115px">
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">Inicio</li>
+          <li><a href="#">Productos</li>
+          <li><a href="#">Sobre nosotros</li>
+          <li><a href="#">Preguntas frecuentes</li>
+        </ul>
+      </nav>
+  
+   
   </header>
+
+   <br>
+      <div class="slider">
+        <img src="/img/torta_perro.jpg" alt="Torta perro" width="80px">
+        <img src="/img/galletitas.jpg" alt="Galletitas" width="80px">
+        <img src="/img/cupcakes.jpg" alt="Cupcakes" width="80px">
+      </div>
+    
+  
+
+  <main>
+    <section class="product-container">
+      Productos
+      <div class="product-item">
+        <img src=".img/torta_perro.jpg" alt="Torta perro" width="100px">
+      </div>
+    </section>
+  </main>  
+
 
 
 <footer>  
