--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
           <li><a href="#">Preguntas frecuentes</li>
         </ul>
       </nav>
-  
-   
   </header>
 
-   <br>
-      <div class="slider">
-        <img src="/img/torta_perro.jpg" alt="Torta perro" width="80px">
-        <img src="/img/galletitas.jpg" alt="Galletitas" width="80px">
-        <img src="/img/cupcakes.jpg" alt="Cupcakes" width="80px">
-      </div>
+      <section class="container">
+        <div class="slider-wrapped">
+          <div class="slider">
+            <img id= "slider-1" src="/img/torta_perro.jpg" alt="Torta perro">
+            <img id= "slider-2" src="/img/galletitas.jpg" alt="Galletitas">
+            <img id= "slider-3" src="/img/cupcakes.jpg" alt="Cupcakes">
+          </div>
+          <div class="slider-nav">
+            <a href="#slider-1"></a>
+            <a href="#slider-2"></a>
+            <a href="#slider-3"></a>
+          </div>
+        </div>        
+      </section>
     
   
 
