new component on the home page (info and pictures)

--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
             <button class="btn-option">ver productos</button>
       </div>
       </div>
+
+      <div class="info-section">
+        <div class="info-copy">
+          <h3>¿Sabías que el 85% de las enfermedades graves en perros y gatos se derivan de una mala alimentación?</h3>
+          <br>
+          <h4>Premiar con snacks naturales ayuda a que tu mascota tenga más vitalidad, mejor digestión y un sistema inmune fuerte.</h4>
+        </div>
+      <div class="info-img">
+          <h4>Nuestros ingredientes principales</h4>
+          <img src="/img/remolacha.png" width="200">
+          <img src="/img/pollocanva.png" width="200">
+          <img src="/img/espinaca.png" width="200">
+          <img src="/img/carne.png" width="200">
+          <img src="/img/huevos.png" width="200">
+          <img src="/img/perejil.png" width="200">
+          <img src="/img/atun.png"width="200">
+          <img src="/img/zanahoria.png"width="200">
+          <img src="/img/avena.png" width="200">
+      </div>
+      </div>
     </main>
 
 
