add new pages and changes in slider

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -17,8 +17,8 @@
       <nav>
         <ul class="nav-links">
           <li><a href="#">Inicio</li>
-          <li><a href="#">Productos</li>
-          <li><a href="#">Sobre nosotros</li>
+          <li><a href="/products.html">Productos</li>
+          <li><a href="/about-us.html">Sobre nosotros</li>
           <li><a href="#">Preguntas frecuentes</li>
         </ul>
       </nav>
@@ -29,9 +29,9 @@
         <div class="slider-wrapped">
 
           <div class="slider">
-            <img id="slider-1" src="img/snacksdulces.png">
-            <img id="slider-2" src="img/snacksalado.png">
-            <img id="slider-3" src="img/cumples.png">
+            <img id="slider-1" src="/img/snackdulce.png">
+            <img id="slider-2" src="/img/snacksalado.png">
+            <img id="slider-3" src="/img/promocumple.png">
           </div>
 
           <div class="slider-nav">
@@ -48,7 +48,7 @@
               <h2>PERROS</h2>
             </div>
             <div class="dog-picture">
-              <img decoding="async" width="400" src="/img/perro.png">
+              <img width="400" src="/img/perro.png">
             </div>
             <button class="btn-option">ver productos</button>
         </div>
@@ -57,7 +57,7 @@
               <h2>GATOS</h2>
             </div>
             <div class="cat-picture">
-              <img decoding="async"   width= "400" src="img/gato.png">
+              <img width= "400" src="img/gato.png">
             </div>
             <button class="btn-option">ver productos</button>
       </div>
@@ -79,7 +79,7 @@
           <img src="/img/perejil.png" width="200">
           <img src="/img/atun.png"width="200">
           <img src="/img/zanahoria.png"width="200">
-          <img src="/img/avena.png" width="200">
+          <img src="/img/avena.png" width="180">
       </div>
       </div>
     </main>
