add more products

--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
     
     <div class="product-item">
       <img src="/img/torta_imagen.png" width="300">
-      <p>Torta con banderin fotografía</p>
+      <p>Torta personalizada</p>
       <button>Ver más</button>
     </div>
 
@@ -55,17 +55,56 @@
     </div>
 
     <div class="product-item">
-      <img src="">
+      <img src="/img/cupcakes.png">
+      <p>Cupcakes</p>
       <button>Ver más</button>
     </div>
 
     <div class="product-item">
-      <img src="">
+      <img src="/img/donas.png">
+      <p>Donas</p>
       <button>Ver más</button>
    </div>
 
     <div class="product-item">
-      <img src="">
+      <img src="/img/galletas_remolacha.png">
+      <p>Galletas de remolacha</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img/galletas_perros.png">
+      <p>Galletas anti-sarro</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img/gomitas.png">
+      <p>Gomitas de colágeno</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img//helado.png">
+      <p>Helados</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img/oreo.png">
+      <p>Oreos</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img/empanadas.png">
+      <p>Empanadas</p>
+      <button>Ver más</button>
+    </div>
+
+    <div class="product-item">
+      <img src="/img/box_compartir.png">
+      <p>Box para compartir</p>
       <button>Ver más</button>
     </div>
 
