--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/index-styles.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -12,11 +12,12 @@
 
   <header class="header" id="the-header">
       <div class="logo">
+        <a href="/index.html"></a>
         <img src="/img/logo.png" alt="Logo del sitio" width="115px">
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Inicio</li>
+          <li><a href="/index.html">Inicio</li>
           <li><a href="/products.html">Productos</li>
           <li><a href="/about-us.html">Sobre nosotros</li>
           <li><a href="#">Preguntas frecuentes</li>
