--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
+  <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="/styles/index-styles.css">
-  <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
 <body>
@@ -103,4 +103,7 @@
 </footer>
 
 </body>
+
+<script src="/app.js"> </script>
+
 </html>
