--- a/products.html
+++ b/products.html
@@ -16,8 +16,8 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
+          <li><a href="/index.html">Inicio</li>
+          <li><a href="/products.html">Productos</li>
           <li><a href="#">Sobre nosotros</a></li>
           <li><a href="#">Preguntas frecuentes</a></li>
         </ul>
@@ -25,12 +25,12 @@
   </header>
 <main>
   <aside>
-    <ul>
-        Filtros
-        Snacks para gatos
-        Snacks para perros
-        Tortas 
-    </ul>
+    <h1>PRODUCTOS</h1>
+    <form role="search" method="get" class="search-form" action="#">
+    <input type="search" class="search-products" placeholder="Buscar...">
+    </form>
+
+    <h2>CATEGORÍAS</h2>
   </aside>
 
  
