change tag div for article on info-section component

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       </div>
 
-      <div class="info-section">
+    <article class="info-section">
         <div class="info-copy">
           <h3>¿Sabías que el 85% de las enfermedades graves en perros y gatos se derivan de una mala alimentación?</h3>
           <br>
@@ -82,7 +82,7 @@
           <img src="/img/zanahoria.png"width="200">
           <img src="/img/avena.png" width="180">
       </div>
-      </div>
+    </article>
     </main>
 
 
