--- a/products.html
+++ b/products.html
@@ -39,7 +39,9 @@
     <div class="product-item">
       <img src="/img/torta_imagen.png" width="300">
       <p>Torta personalizada</p>
-      <button>Ver más</button>
+      <a href="/product-details.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
