create files html and css for six  products

--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
     <div class="product-item">
       <img src="/img/torta_imagen.png" width="300">
       <p>Torta personalizada</p>
-      <a href="/product-details.html">
+      <a href="/product1.html">
         <button>Ver más</button>
       </a>
     </div>
