--- a/product3.html
+++ b/product3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/products-styles.css">
+  <link rel="stylesheet" href="/styles/product3-styles.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -16,13 +16,31 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
-          <li><a href="#">Preguntas frecuentes</a></li>
+          <li><a href="/index.html">Inicio</li>
+          <li><a href="/products.html">Productos</li>
+          <li><a href="/about-us.html">Sobre nosotros</li>
+          <li><a href="#">Preguntas frecuentes</li>
         </ul>
       </nav>
   </header>
+
+  <main>
+    <div class="breadcrumb">
+      <a class="incio-breadcrum" href="/index.html">INICIO</a>
+      <span class="divider">/</span>
+      <a class="productos-breadcrum" href="/products.html">PRODUCTOS</a>
+      <span class="divider">/</span>
+      <span class="active-breadcrum">TORTA BANDERINES<a>
+    </div>
+    <div class="img-tortabanderines">
+      <img src="/img/torta_banderines.png">
+    </div>
+    <div class="price-container">
+      <h1>TORTA BANDERINES</h1>
+      <p>$10.000</p>
+      <button class="add-to-cart">agregar al carrito</button>
+    </div>
+  </main>
 
     <footer>  
     <div class="first-column">
