add info and items in about-us

--- a/about-us.html
+++ b/about-us.html
@@ -16,13 +16,20 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
+          <li><a href="/index.html">Inicio</li>
+          <li><a href="/products.html">Productos</li>
+          <li><a href="/about-us.html">Sobre nosotros</a></li>
           <li><a href="#">Preguntas frecuentes</a></li>
         </ul>
       </nav>
   </header>
+
+  <main>
+    <div class="copy-solution">
+      <p>En nuestra tienda encontraras mucho mas que snacks: ofrecemos una propuesta saludable, validada por profesionales y pensada para el disfrute de perros y gatos. Cada producto combina sabor, calidad y seguridad, para que consientas a tu mascota sin preocuparte de conservantes dañinos, azúcares agregados o ingredientes que pueden traer enfermedades.</p>
+      <img src="/img/items.png">
+    </div>
+  </main>
 
     <footer>  
     <div class="first-column">
