--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
         <ul class="nav-links">
           <li><a href="/index.html">Inicio</li>
           <li><a href="/products.html">Productos</li>
-          <li><a href="#">Sobre nosotros</a></li>
+          <li><a href="/about-us.html">Sobre nosotros</a></li>
           <li><a href="#">Preguntas frecuentes</a></li>
         </ul>
       </nav>
@@ -47,31 +47,41 @@
     <div class="product-item">
       <img src="/img/torta_hueso.png" width="300">
       <p>Torta forma de hueso</p>
-      <button>Ver más</button>
+      <a href="/product2.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
       <img src="/img/torta_banderines.png" width="300">
       <p>Torta 10cm con banderines</p>
-      <button>Ver más</button>
+      <a href="/product3.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
       <img src="/img/cupcakes.png">
       <p>Cupcakes</p>
-      <button>Ver más</button>
+      <a href="/product4.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
       <img src="/img/donas.png">
       <p>Donas</p>
-      <button>Ver más</button>
+      <a href="/product5.html">
+        <button>Ver más</button>
+      </a>
    </div>
 
     <div class="product-item">
       <img src="/img/galletas_remolacha.png">
       <p>Galletas de remolacha</p>
-      <button>Ver más</button>
+      <a href="/product6.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
