add three more products

--- a/product7.html
+++ b/product7.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/about-us-styles.css">
+  <link rel="stylesheet" href="/styles/product7-styles.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -18,16 +18,27 @@
         <ul class="nav-links">
           <li><a href="/index.html">Inicio</li>
           <li><a href="/products.html">Productos</li>
-          <li><a href="/about-us.html">Sobre nosotros</a></li>
-          <li><a href="#">Preguntas frecuentes</a></li>
+          <li><a href="/about-us.html">Sobre nosotros</li>
+          <li><a href="#">Preguntas frecuentes</li>
         </ul>
       </nav>
   </header>
 
   <main>
-    <div class="copy-solution">
-      <p>En nuestra tienda encontraras mucho mas que snacks: ofrecemos una propuesta saludable, validada por profesionales y pensada para el disfrute de perros y gatos. Cada producto combina sabor, calidad y seguridad, para que consientas a tu mascota sin preocuparte de conservantes dañinos, azúcares agregados o ingredientes que pueden traer enfermedades.</p>
-      <img src="/img/items.png">
+    <div class="breadcrumb">
+      <a class="incio-breadcrum" href="/index.html">INICIO</a>
+      <span class="divider">/</span>
+      <a class="productos-breadcrum" href="/products.html">PRODUCTOS</a>
+      <span class="divider">/</span>
+      <span class="active-breadcrum">GALLETAS ANTI-SARRO</a>
+    </div>
+    <div class="img-galletasperro">
+      <img src="/img/galletas_perros.png">
+    </div>
+    <div class="price-container">
+      <h1>GALLETAS ANTI-SARRO</h1>
+      <p>$10.000</p>
+      <button class="add-to-cart">agregar al carrito</button>
     </div>
   </main>
 
