add links to "see more" buttons on products and style sheets

--- a/products.html
+++ b/products.html
@@ -87,19 +87,25 @@
     <div class="product-item">
       <img src="/img/galletas_perros.png">
       <p>Galletas anti-sarro</p>
-      <button>Ver más</button>
+      <a href="/product7.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
       <img src="/img/gomitas.png">
       <p>Gomitas de colágeno</p>
-      <button>Ver más</button>
+      <a href="/product8.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
     <div class="product-item">
       <img src="/img//helado.png">
       <p>Helados</p>
-      <button>Ver más</button>
+      <a href="/product9.html">
+        <button>Ver más</button>
+      </a>
     </div>
 
   </section>
