--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 
   <header class="header" id="the-header">
       <div class="logo">
-        <a href="/index.html"></a>
-        <img src="/img/logo.png" alt="Logo del sitio" width="115px">
+        <a href="/index.html">
+        <img src="/img/logo.png" alt="Logo del sitio">
+        </a>
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="/index.html">Inicio</li>
-          <li><a href="/products.html">Productos</li>
-          <li><a href="/about-us.html">Sobre nosotros</li>
-          <li><a href="#">Preguntas frecuentes</li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/products.html">Productos</a></li>
+          <li><a href="/about-us.html">Sobre nosotros</a></li>
+          <li><a href="#">Preguntas frecuentes</a></li>
         </ul>
       </nav>
   </header>
