--- a/index.html
+++ b/index.html
@@ -6,24 +6,31 @@
   <title>Bocaditos Chulos</title>
   <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="/styles/index-styles.css">
+  <link rel="stylesheet" href="/styles/navbar-style.css">
 </head>
 
 <body>
 
   <header class="header" id="the-header">
-      <div class="logo">
-        <a href="/index.html">
-        <img src="/img/logo.png" alt="Logo del sitio">
-        </a>
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/products.html">Productos</a></li>
-          <li><a href="/about-us.html">Sobre nosotros</a></li>
-          <li><a href="#">Preguntas frecuentes</a></li>
-        </ul>
-      </nav>
+    <nav class="navbar">
+      <a href="/index.html" class="logo">
+        <img src="/img/logo.png" height="50" width="50" alt="logo del sitio">
+      </a>
+
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+       <label for="menu-toggle" class="menu-btn">
+        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+       </label>
+
+      <ul class="nav-links">
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="/products.html">Productos</a></li>
+        <li><a href="/about-us.html">Sobre nosotros</a></li>
+        <li><a href="#">Preguntas frecuentes</a></li>
+      </ul>  
+    </nav>
   </header>
 
   <main>
