add page style footer and form in home

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="/styles/index-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/footer-style.css">
 </head>
 
 <body>
@@ -90,6 +91,28 @@
           <img src="/img/avena.png" width="180">
       </div>
     </article>
+
+    <div class="text-form">
+      <h5>¡Contáctanos para mas información!</h5>
+    </div>
+    <form class="contact-form" method="post">
+      <label for="name" class="label-form">Nombre</label>
+      <input type="text" id="name" class="inputs-form" placeholder="John">
+
+      <label for="lastname" class="label-form">Apellido</label>
+      <input type="text" id="lastname" class="inputs-form" placeholder="Doe">
+
+      <label for="email" class="label-form">Email</label>
+      <input type="email" id="email" class="inputs-form" placeholder="johndoe@gmail.com">
+
+      <label for="phone" class="label-form">Teléfono</label>
+      <input type="text" id="phone" class="inputs-form" placeholder="01123456789">
+
+      <label for="message" class="label-form">Mensaje</label>
+      <textarea id="message" name="message" class="inputs-form" placeholder="Escribe aquí tu consulta..."></textarea>
+
+      <input type="submit" class="btn-submit" value="Enviar">
+    </form>
     
     </main>
 
