--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
   <title>Bocaditos Chulos</title>
   <link rel="stylesheet" href="/styles/products-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/footer-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -48,7 +49,7 @@
     <div class="product-item">
       <img src="/img/torta_imagen.png" width="300">
       <p>Torta personalizada</p>
-      <a href="/product1.html">
+      <a href="/product-details.html">
         <button>Ver más</button>
       </a>
     </div>
@@ -56,7 +57,7 @@
     <div class="product-item">
       <img src="/img/torta_hueso.png" width="300">
       <p>Torta forma de hueso</p>
-      <a href="/product2.html">
+      <a href="/product-details.html">
         <button>Ver más</button>
       </a>
     </div>
@@ -64,7 +65,7 @@
     <div class="product-item">
       <img src="/img/torta_banderines.png" width="300">
       <p>Torta 10cm con banderines</p>
-      <a href="/product3.html">
+      <a href="/product-details.html">
         <button>Ver más</button>
       </a>
     </div>
