--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/product1-styles.css">
+  <link rel="stylesheet" href="/styles/products-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
