add images header mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header" id="the-header">
     <nav class="navbar">
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" height="50" width="50" alt="logo del sitio">
+        <img src="/img/logo.png" alt="logo del sitio">
       </a>
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -35,21 +35,36 @@
 
   <main>
       <section class="container-slider" id="home-hero">
-        <div class="slider-wrapped">
 
-          <div class="slider">
+        <div class="slider-wrapped-desktop">
+          <div class="slider-desktop">
             <img id="slider-1" src="/img/snackdulce.png">
             <img id="slider-2" src="/img/snacksalado.png">
             <img id="slider-3" src="/img/promocumple.png">
           </div>
 
-          <div class="slider-nav">
+          <div class="slider-nav-desktop">
             <a href="#slider-1"></a>
             <a href="#slider-2"></a>
             <a href="#slider-3"></a>
           </div>
-        </div>        
+        </div>
+        
+        <div class="slider-wrapped-mobile">
+        <div class="slider-mobile">
+            <img id="slider-1" src="/img/dulce-mobile.png">
+            <img id="slider-2" src="/img/salado-mobile.png">
+            <img id="slider-3" src="/img/cumple-mobile.png">
+          </div>
+
+          <div class="slider-nav-mobile">
+            <a href="#slider-1"></a>
+            <a href="#slider-2"></a>
+            <a href="#slider-3"></a>
+          </div>
+
       </section>
+      
 
       <div class="container-options">
         <div class="option-dog">
