--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-      </ul>  
+        <li><a href="/cart.html" class="cart-btn"></a>
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></li>
+      </ul>
     </nav>
   </header>
 
