changes responsive index

--- a/product-details.html
+++ b/product-details.html
@@ -6,6 +6,7 @@
   <title>Bocaditos Chulos</title>
   <link rel="stylesheet" href="/styles/products-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/footer-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
 
@@ -14,7 +15,7 @@
   <header class="header" id="the-header">
     <nav class="navbar">
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" height="50" width="50" alt="logo del sitio">
+        <img src="/img/logo.png" alt="logo del sitio">
       </a>
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -28,7 +29,10 @@
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-      </ul>  
+        <li><a href="/cart.html" class="cart-btn">
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
+        </li>
+      </ul>
     </nav>
   </header>
 
