--- a/about-us.html
+++ b/about-us.html
@@ -29,8 +29,9 @@
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-        <li><a href="/cart.html" class="cart-btn"></a>
-          <img src="/img/cart3.svg" alt="carrito" class="carrito"></li>
+        <li><a href="/cart.html" class="cart-btn">
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
+        </li>
       </ul>
     </nav>
   </header>
