--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
   <header class="header" id="the-header">
     <nav class="navbar">
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" height="50" width="50" alt="logo del sitio">
+        <img src="/img/logo.png" alt="logo del sitio">
       </a>
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -29,7 +29,9 @@
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-      </ul>  
+        <li><a href="/cart.html" class="cart-btn"></a>
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></li>
+      </ul>
     </nav>
   </header>
 
