menu hamburguer from center to left

--- a/products.html
+++ b/products.html
@@ -14,23 +14,25 @@
 
   <header class="header" id="the-header">
     <nav class="navbar">
-      <a href="/index.html" class="logo">
-        <img src="/img/logo.png" alt="logo del sitio">
-      </a>
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
         <img src="/img/list.svg" alt="abrir menú" class="open-menu">
         <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
+       
+      <a href="/index.html" class="logo">
+        <img src="/img/logo.png" alt="logo del sitio">
+      </a>
 
       <ul class="nav-links">
         <li><a href="/index.html">Inicio</a></li>
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-        <li><a href="/cart.html" class="cart-btn"></a>
-          <img src="/img/cart3.svg" alt="carrito" class="carrito"></li>
+        <li><a href="/cart.html" class="cart-btn">
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
+        </li>
       </ul>
     </nav>
   </header>
