--- a/checkout.html
+++ b/checkout.html
@@ -11,17 +11,28 @@
 <body>
 
   <header class="header" id="the-header">
-      <div class="logo">
-        <img src="/img/logo.png" alt="Logo del sitio" width="115px">
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
-          <li><a href="#">Preguntas frecuentes</a></li>
-        </ul>
-      </nav>
+    <nav class="navbar">
+
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+       <label for="menu-toggle" class="menu-btn">
+        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+       </label>
+       
+      <a href="/index.html" class="logo">
+        <img src="/img/logo.png" alt="logo del sitio">
+      </a>
+
+      <ul class="nav-links">
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="/products.html">Productos</a></li>
+        <li><a href="/about-us.html">Sobre nosotros</a></li>
+        <li><a href="#">Preguntas frecuentes</a></li>
+        <li><a href="/cart.html" class="cart-btn">
+          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
     <footer>  
