--- a/index.html
+++ b/index.html
@@ -104,15 +104,7 @@
         </div>
       <div class="info-img">
           <h4>Nuestros ingredientes principales</h4>
-          <img src="/img/remolacha.png" width="200">
-          <img src="/img/pollocanva.png" width="200">
-          <img src="/img/espinaca.png" width="200">
-          <img src="/img/carne.png" width="200">
-          <img src="/img/huevos.png" width="200">
-          <img src="/img/perejil.png" width="200">
-          <img src="/img/atun.png"width="200">
-          <img src="/img/zanahoria.png"width="200">
-          <img src="/img/avena.png" width="180">
+          <img src="/img/ingredientes.png" width="600">
       </div>
     </article>
 
