--- a/products.html
+++ b/products.html
@@ -30,10 +30,11 @@
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
-        <li><a href="/cart.html" class="cart-btn">
-          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
-        </li>
       </ul>
+
+      <a href="/cart.html" class="cart-btn">
+        <img src="/img/cart3.svg" alt="carrito" class="carrito">
+      </a>
     </nav>
   </header>
 
