--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/products-styles.css">
+  <link rel="stylesheet" href="/styles/product-details-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
   <link rel="stylesheet" href="/styles/footer-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
@@ -41,19 +41,29 @@
   <main>
     <div class="breadcrumb">
       <a class="incio-breadcrum" href="/index.html">INICIO</a>
+
       <span class="divider">/</span>
       <a class="productos-breadcrum" href="/products.html">PRODUCTOS</a>
       <span class="divider">/</span>
       <span class="active-breadcrum">TORTA PERSONALIZADA</a>
     </div>
-    <div class="img-tortapersonalizada">
-      <img src="/img/torta_imagen.png">
+    <div class="detail-component">
+    <div class="img-container">
+      <img src="/img/torta_imagen.png" alt="imagen del producto">
     </div>
     <div class="price-container">
       <h1>TORTA PERSONALIZADA</h1>
       <p>$10.000</p>
       <button class="add-to-cart">agregar al carrito</button>
     </div>
+    <div class="details">
+      <p>Torta para perros tamaño pequeño ideal para festejar cualquier momento importante con tu perrito, su cumpleaños o aniversario de adopción ❤️</p>
+        <br>
+      <p>Torta para perros elaborada a base de pollo, zanahoria y crema de papa.</p>
+        <br>
+      <p>Especificar fecha de entrega y nombre del perrito en "COMENTARIOS ADICIONALES". *Producción a pedido.</p>
+    </div>
+  </div>
   </main>
 
     <footer>  
