add input quantity in product details

--- a/product-details.html
+++ b/product-details.html
@@ -40,11 +40,11 @@
 
   <main>
     <div class="breadcrumb">
-      <a class="incio-breadcrum" href="/index.html">INICIO</a>
+      <a class="inicio-breadcrum" href="/index.html">INICIO</a>
 
       <span class="divider">/</span>
       <a class="productos-breadcrum" href="/products.html">PRODUCTOS</a>
-      <span class="divider">/</span>
+      <span class="divider">/ </span>
       <span class="active-breadcrum">TORTA PERSONALIZADA</a>
     </div>
     <div class="detail-component">
@@ -53,14 +53,14 @@
     </div>
     <div class="price-container">
       <h1>TORTA PERSONALIZADA</h1>
-      <p>$10.000</p>
-      <button class="add-to-cart">agregar al carrito</button>
+      <h2>$10.000</h2>
+      <label for="quantity" class="quantity-label">CANTIDAD</label>
+      <input id="quantity" class="quantity" type="number" value="1" name="quantity">
+      <button class="add-to-cart">AGREGAR AL CARRITO</button>
     </div>
     <div class="details">
       <p>Torta para perros tamaño pequeño ideal para festejar cualquier momento importante con tu perrito, su cumpleaños o aniversario de adopción ❤️</p>
-        <br>
       <p>Torta para perros elaborada a base de pollo, zanahoria y crema de papa.</p>
-        <br>
       <p>Especificar fecha de entrega y nombre del perrito en "COMENTARIOS ADICIONALES". *Producción a pedido.</p>
     </div>
   </div>
