add stylesheet for breadcrumb + change primary color

--- a/product-details.html
+++ b/product-details.html
@@ -6,6 +6,7 @@
   <title>Bocaditos Chulos</title>
   <link rel="stylesheet" href="/styles/product-details-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/breadcrum-style.css">
   <link rel="stylesheet" href="/styles/footer-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
