--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
   <title>Bocaditos Chulos</title>
   <link rel="stylesheet" href="/styles/products-styles.css">
   <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/breadcrum-style.css">
   <link rel="stylesheet" href="/styles/footer-style.css">
   <link rel="logo" href="/img/logopaletaactualizada.png">
 </head>
@@ -37,6 +38,12 @@
       </a>
     </nav>
   </header>
+
+  <div class="breadcrumb">
+      <a class="inicio-breadcrum" href="/index.html">INICIO</a>
+      <span class="divider">/</span>
+      <span class="active-breadcrum">PRODUCTOS</span>
+    </div>
 
 <main>
   <aside>
