add filter styles on products page

--- a/products.html
+++ b/products.html
@@ -47,12 +47,31 @@
 
 <main>
   <aside>
-    <h1>PRODUCTOS</h1>
     <form role="search" method="get" class="search-form" action="#">
     <input type="search" class="search-products" placeholder="Buscar...">
     </form>
-
-    <h2>CATEGORÍAS</h2>
+    <h1>PERROS</h1>
+    <ul class="cat-list">
+      <li class="item-list"><a href="#">Tortas</a></li>
+      <li class="item-list"><a href="#">Cupcakes</a></li>
+      <li class="item-list"><a href="#">Galletas</a></li>
+      <li class="item-list"><a href="#">Gomitas</a></li>
+      <li class="item-list"><a href="#">Donas</a></li>
+      <li class="item-list"><a href="#">Brownie</a></li>
+      <li class="item-list"><a href="#">Helados</a></li>
+      <li class="item-list"><a href="#">Pizzas</a></li>
+      <li class="item-list"><a href="#">Empanadas</a></li>
+    </ul>
+    <h1>GATOS</h1>
+    <ul class="cat-list">
+      <li class="item-list"><a href="#">Tortas</a></li>
+      <li class="item-list"><a href="#">Cupcakes</a></li>
+      <li class="item-list"><a href="#">Galletas</a></li>
+      <li class="item-list"><a href="#">Gomitas</a></li>
+      <li class="item-list"><a href="#">Gelatina</a></li>
+      <li class="item-list"><a href="#">Pizzas</a></li>
+      <li class="item-list"><a href="#">Empanadas</a></li>
+    </ul>
   </aside>
 
  
