add icon on footer + cart style sheet

--- a/about-us.html
+++ b/about-us.html
@@ -41,11 +41,13 @@
   <main>
     <div class="copy-solution">
       <p>En nuestra tienda encontraras mucho mas que snacks: ofrecemos una propuesta saludable, validada por profesionales y pensada para el disfrute de perros y gatos. Cada producto combina sabor, calidad y seguridad, para que consientas a tu mascota sin preocuparte de conservantes dañinos, azúcares agregados o ingredientes que pueden traer enfermedades.</p>
-      <img src="/img/items.png">
     </div>
   </main>
 
     <footer>  
+      <div class="logo-footer">
+      <img src="/img/logo.png" alt="logo del sitio">
+    </div>
     <div class="first-column">
       <p>Explorar</p>
       <a href="#">Sobre nosotros</a>
