--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 
 
 <footer>  
+    <div class="logo-footer">
+      <img src="/img/logo.png" alt="logo del sitio">
+    </div>
     <div class="first-column">
       <p>Explorar</p>
       <a href="#">Sobre nosotros</a>
