--- a/product-details.html
+++ b/product-details.html
@@ -68,6 +68,9 @@
   </main>
 
     <footer>  
+      <div class="logo-footer">
+      <img src="/img/logo.png" alt="logo del sitio">
+    </div>
     <div class="first-column">
       <p>Explorar</p>
       <a href="#">Sobre nosotros</a>
