--- a/products.html
+++ b/products.html
@@ -154,6 +154,9 @@
   </main>
 
   <footer>  
+    <div class="logo-footer">
+      <img src="/img/logo.png" alt="logo del sitio">
+    </div>
     <div class="first-column">
       <p>Explorar</p>
       <a href="#">Sobre nosotros</a>
