add margin on products page

--- a/products.html
+++ b/products.html
@@ -80,6 +80,7 @@
     <div class="product-item">
       <img src="/img/torta_imagen.png" width="300">
       <p>Torta personalizada</p>
+      <h2>$13.000,00</h2>
       <a href="/product-details.html">
         <button>Ver más</button>
       </a>
@@ -88,6 +89,7 @@
     <div class="product-item">
       <img src="/img/torta_hueso.png" width="300">
       <p>Torta forma de hueso</p>
+      <h2>$10.000,00</h2>
       <a href="/product-details.html">
         <button>Ver más</button>
       </a>
@@ -95,7 +97,8 @@
 
     <div class="product-item">
       <img src="/img/torta_banderines.png" width="300">
-      <p>Torta 10cm con banderines</p>
+      <p>Torta con banderines</p>
+      <h2>$12.000,00</h2>
       <a href="/product-details.html">
         <button>Ver más</button>
       </a>
@@ -104,6 +107,7 @@
     <div class="product-item">
       <img src="/img/cupcakes.png">
       <p>Cupcakes</p>
+      <h2>$5.000,00</h2>
       <a href="/product4.html">
         <button>Ver más</button>
       </a>
@@ -112,6 +116,7 @@
     <div class="product-item">
       <img src="/img/donas.png">
       <p>Donas</p>
+      <h2>$6.000,00</h2>
       <a href="/product5.html">
         <button>Ver más</button>
       </a>
@@ -120,6 +125,7 @@
     <div class="product-item">
       <img src="/img/galletas_remolacha.png">
       <p>Galletas de remolacha</p>
+      <h2>$3.000,00</h2>
       <a href="/product6.html">
         <button>Ver más</button>
       </a>
@@ -128,6 +134,7 @@
     <div class="product-item">
       <img src="/img/galletas_perros.png">
       <p>Galletas anti-sarro</p>
+      <h2>$5.000,00</h2>
       <a href="/product7.html">
         <button>Ver más</button>
       </a>
@@ -136,6 +143,7 @@
     <div class="product-item">
       <img src="/img/gomitas.png">
       <p>Gomitas de colágeno</p>
+      <h2>$8.000,00</h2>
       <a href="/product8.html">
         <button>Ver más</button>
       </a>
@@ -144,6 +152,7 @@
     <div class="product-item">
       <img src="/img//helado.png">
       <p>Helados</p>
+      <h2>$3.000,00</h2>
       <a href="/product9.html">
         <button>Ver más</button>
       </a>
