add cart resume

--- a/cart.html
+++ b/cart.html
@@ -70,10 +70,42 @@
               </td>
               <td class="product-subtotal" data-title="Subtotal"></td>
             </tr>
+            <tr>
+              <td colspan="6" class="actions">
+                <button type="submit" class="btn-shop">Continuar comprando</button>
+                <button type="submit" class="btn-empty">Vaciar carrito</button>
+              </td>
+            </tr>
           </tbody>
         </table>
     </div>
+
+    <aside class="total-cart">
+        <h1>RESUMEN</h1>
+          <table cellspacing="0" class="cart-table">
+            <tbody>
+              <tr class="cart-subtotal">
+                <th>Subtotal</th>
+              </tr>
+              <tr class="cart-envio">
+                <th>Envío</th>
+              </tr>
+              <tr class="cart-total">
+                <th>Total</th>
+              </tr>
+            </tbody>
+          </table>  
+
+          <div class="terms">
+              <label class="terms-row">
+                <input id="checkTermsAndConditions" type="checkbox" checked>
+                <span>Declaro que he leído y acepto los <a href="#">Términos y condiciones</a></span>
+              </label>
+            </div>
+  </aside>
   </main>
+
+  
 
   <footer>  
     <div class="logo-footer">
