delete img and new logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bocaditos Chulos</title>
   <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="/styles/index-styles.css">
-  <link rel="stylesheet" href="/styles/navbar-style.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <link rel="stylesheet" href="/styles/footer-style.css">
 </head>
 
@@ -22,7 +22,7 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" alt="logo del sitio">
+        <img src="/img/logo png .png" alt="logo del sitio">
       </a>
 
       <ul class="nav-links">
